<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".ui.befriend.BefriendFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_bar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/purple_200"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/app_name_uppercase"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/befriend_profile_card"
        layout="@layout/profile_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/header_bar"
        android:layout_margin="30dp"/>

    <ImageButton
        android:id="@+id/reject_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:adjustViewBounds="true"
        android:background="@color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_twotone_circle_cross"
        app:layout_constraintEnd_toStartOf="@id/accept_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/befriend_profile_card" />

    <ImageButton
        android:id="@+id/accept_button"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="60dp"
        android:adjustViewBounds="true"
        android:background="@color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_twotone_circle_check"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/reject_button"
        app:layout_constraintTop_toBottomOf="@id/befriend_profile_card" />

    <Button
        android:id="@+id/my_friends_button"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="16dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/friends_button_text"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>