<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".ui.friends.DetailsFragment">

    <include
        android:id="@+id/details_profile_card"
        layout="@layout/profile_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp" />

    <Button
        android:id="@+id/details_delete_friend_button"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_margin="16dp"
        android:backgroundTint="@color/red"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:text="@string/delete_button_text" />
</FrameLayout>